k8s-infra-aws-ssm/grafana/image-renderer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  namespace: dev
  labels:
    app: grafana-image-renderer
spec:
  type: ClusterIP
  selector:
    app: grafana-image-renderer
  ports:
    - name: http
      port: 8081
      targetPort: 8081
